Change Navbar header name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <!-- Sidebar -->
     <div class="w3-sidebar w3-bar-block w3-card" style="width: 25%; right: 0">
-      <h3 class="w3-bar-item">Menu</h3>
+      <h4 class="w3-bar-item">CSS Documentation</h4>
       <ul id="navbar">
         <li><a href="#" class="w3-bar-item w3-button">Introduction</a></li>
         <li><a href="#" class="w3-bar-item w3-button">Syntax</a></li>
