--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
     <div class="w3-sidebar w3-bar-block w3-card" style="width: 25%; right: 0">
       <h4 class="w3-bar-item">CSS Documentation</h4>
       <ul id="navbar">
-        <li><a href="#" class="w3-bar-item w3-button">Introduction</a></li>
-        <li><a href="#" class="w3-bar-item w3-button">Syntax</a></li>
-        <li><a href="#" class="w3-bar-item w3-button">Browser Support</a></li>
-        <li><a href="#" class="w3-bar-item w3-button">Limitations</a></li>
-        <li><a href="#" class="w3-bar-item w3-button">Advantages</a></li>
-        <li><a href="#" class="w3-bar-item w3-button">Standardization</a></li>
-      </ul>
+        <a href="#" class="w3-bar-item w3-button">Introduction</a>        
+        <a href="#" class="w3-bar-item w3-button">Syntax</a>        
+        <a href="#" class="w3-bar-item w3-button">Browser Support</a>        
+        <a href="#" class="w3-bar-item w3-button">Limitations</a>        
+        <a href="#" class="w3-bar-item w3-button">Advantages</a>        
+        <a href="#" class="w3-bar-item w3-button">Standardization</a>                  
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js
     "></script>
