Create sections in main content

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <!-- Sidebar -->
-    <div class="w3-sidebar w3-bar-block w3-card" style="width: 25%; right: 0">
+    <div class="w3-sidebar w3-bar-block w3-card" id="navbar" style="width: 25%; right: 0">
       <h4 class="w3-bar-item">CSS Documentation</h4>
-      <ul id="navbar">
+      <ul>
         <a href="#" class="w3-bar-item w3-button">Introduction</a>        
         <a href="#" class="w3-bar-item w3-button">Syntax</a>        
         <a href="#" class="w3-bar-item w3-button">Browser Support</a>        
@@ -21,6 +21,34 @@
         <a href="#" class="w3-bar-item w3-button">Advantages</a>        
         <a href="#" class="w3-bar-item w3-button">Standardization</a>                  
     </div>
+    <!-- Main Content -->
+    <main id="main-doc">
+      <!-- introduction -->
+      <section class="main-section" id="introduction">
+          <header class="w3-container w3-teal">Introduction</header>
+          <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
+      </section>
+      <!-- syntax -->
+      <section class="main-section" id="syntax">
+        <header class="w3-container w3-teal">Syntax</header>
+      </section>
+      <!-- browser support -->
+      <section class="main-section" id="browser_support">
+        <header class="w3-container w3-teal">Browser Support</header>
+      </section>
+      <!-- limitations -->
+      <section class="main-section" id="limitations">
+        <header class="w3-container w3-teal">Limitations</header>
+      </section>
+      <!-- advantages -->
+      <section class="main-section" id="advantages">
+        <header class="w3-container w3-teal">Advantages</header>
+      </section>
+      <!-- standardization -->
+      <section class="main-section" id="standardization">
+        <header class="w3-container w3-teal">Standardization</header>
+      </section>
+    </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js
     "></script>
   </body>
