Finish Documentation Page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -20,7 +20,7 @@
     <div class="grid-container">
       <!-- Sidebar -->
       <nav id="navbar">
-        <header class="">CSS Documentation</header>
+        <header>CSS Documentation</header>
         <a href="#introduction" class="nav-link">Introduction</a>
         <a href="#syntax" class="nav-link">Syntax</a>
         <a href="#browser_support" class="nav-link">Browser Support</a>
@@ -35,33 +35,31 @@
           <header>
             <h4>Introduction</h4>
           </header>
-          <div>
-            <p>
-              <span>Cascading Style Sheets (CSS)</span> is a style sheet
-              language used for describing the presentation of a document
-              written in a markup language such as HTML. CSS is a cornerstone
-              technology of the World Wide Web, alongside HTML and JavaScript.
-            </p>
-            <p>
-              CSS is designed to enable the separation of presentation and
-              content, including layout, colors, and fonts. This separation can
-              improve content accessibility, provide more flexibility and
-              control in the specification of presentation characteristics,
-              enable multiple web pages to share formatting by specifying the
-              relevant CSS in a separate .css file which reduces complexity and
-              repetition in the structural content as well as enabling the .css
-              file to be cached to improve the page load speed between the pages
-              that share the file and its formatting.
-            </p>
-            <p>
-              Separation of formatting and content also makes it feasible to
-              present the same markup page in different styles for different
-              rendering methods, such as on-screen, in print, by voice (via
-              speech-based browser or screen reader), and on Braille-based
-              tactile devices. CSS also has rules for alternate formatting if
-              the content is accessed on a mobile device.
-            </p>
-          </div>
+          <p>
+            <span>Cascading Style Sheets (CSS)</span> is a style sheet language
+            used for describing the presentation of a document written in a
+            markup language such as HTML. CSS is a cornerstone technology of the
+            World Wide Web, alongside HTML and JavaScript.
+          </p>
+          <p>
+            CSS is designed to enable the separation of presentation and
+            content, including layout, colors, and fonts. This separation can
+            improve content accessibility, provide more flexibility and control
+            in the specification of presentation characteristics, enable
+            multiple web pages to share formatting by specifying the relevant
+            CSS in a separate .css file which reduces complexity and repetition
+            in the structural content as well as enabling the .css file to be
+            cached to improve the page load speed between the pages that share
+            the file and its formatting.
+          </p>
+          <p>
+            Separation of formatting and content also makes it feasible to
+            present the same markup page in different styles for different
+            rendering methods, such as on-screen, in print, by voice (via
+            speech-based browser or screen reader), and on Braille-based tactile
+            devices. CSS also has rules for alternate formatting if the content
+            is accessed on a mobile device.
+          </p>
         </section>
         <!-- syntax -->
         <section class="main-section" id="syntax">
