Edit source text

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           </p>
         </div>
       </section>
-      <p>*Text and images taken from <a href="https://en.wikipedia.org/wiki/CSS">Wikipedia</a></p>
+      <p>*Text taken from <a href="https://en.wikipedia.org/wiki/CSS">Wikipedia</a></p>
     </main>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js
